--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,10 @@
   "manifest_version": 2,
 
   "name": "Getting Pomodoro Done",
-  "description": "This extension demonstrates a browser action with kittens.",
+  "description": "",
   "version": "1.0r1",
 
   "permissions": [
-    "https://secure.flickr.com/"
   ],
   "browser_action": {
     "default_icon": "icon.png",
